Minor code refactoring and small usability update.